Switched from quirks mode to standard mode. Adjusted positioning of elements on homepage, such that they no longer shift in unsightly ways when, say, Developer Tools is opened

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
-
-body {
+*/ body {
   position: relative;
 }
+
+/* HOMEPAGE STYLES BELOW */
 
 body * {
   font-family: Arvo;
@@ -14,7 +15,7 @@ body * {
   top: -8px;
   left: -8px;
   width: 100vw;
-  height: 10%;
+  height: 70px;
   background-image: linear-gradient(
     to bottom,
     rgba(139, 55, 55, 0.65),
@@ -33,7 +34,7 @@ body * {
   bottom: 0;
   height: 100%;
   width: 100%;
-  background-color: rgb(139, 55, 55);
+  background-color: rgb(139, 55, 55, 0.65);
   border-bottom: 1px rgb(21, 21, 21) solid;
   z-index: 0;
   opacity: 0;
@@ -57,8 +58,8 @@ body * {
 }
 
 #menu {
-  position: fixed;
-  top: 10%;
+  position: absolute;
+  top: 90px;
   left: 0;
   padding: 20px;
   font-size: 20pt;
@@ -77,9 +78,9 @@ body * {
 }
 
 #login-bar {
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 10%;
+  height: 70px;
   left: 0;
   bottom: 0;
   background-color: rgba(139, 55, 55, 0.65);
@@ -109,8 +110,10 @@ button:hover {
   box-shadow: 0px 10px 20px rgb(54, 52, 52);
 }
 
+/* LOGIN PAGE STYLES BELOW */
+
 body#login {
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   display: flex;
   align-items: center;
